// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders root class if not the active Thumbnail 1`] = `
<button
  aria-label="Next Image"
  className="root"
  onClick={[Function]}
  type="button"
>
  <div
    className="root container"
  >
    <img
      alt="test-thumbnail"
      aria-hidden="true"
      className="image placeholder"
      height={170}
      loading="eager"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
      style={
        Object {
          "--height": "170px",
          "--width": "135px",
        }
      }
      width={135}
    />
    <img
      alt="test-thumbnail"
      className="image notLoaded"
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      sizes="135px"
      src="/media/catalog/product/thumbnail.png?auto=webp&format=png&width=135&height=170&fit=cover"
      srcSet="/media/catalog/product/thumbnail.png?auto=webp&format=png&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=2560&height=3200&fit=cover 2560w"
      style={
        Object {
          "--height": "170px",
          "--width": "135px",
        }
      }
      width={135}
    />
  </div>
</button>
`;

exports[`renders the Thumbnail component correctly 1`] = `
<button
  aria-label="Current Image"
  className="rootSelected"
  onClick={[Function]}
  type="button"
>
  <div
    className="root container"
  >
    <img
      alt="test-thumbnail"
      aria-hidden="true"
      className="image placeholder"
      height={170}
      loading="eager"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
      style={
        Object {
          "--height": "170px",
          "--width": "135px",
        }
      }
      width={135}
    />
    <img
      alt="test-thumbnail"
      className="image notLoaded"
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      sizes="135px"
      src="/media/catalog/product/thumbnail.png?auto=webp&format=png&width=135&height=170&fit=cover"
      srcSet="/media/catalog/product/thumbnail.png?auto=webp&format=png&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail.png?auto=webp&format=png&width=2560&height=3200&fit=cover 2560w"
      style={
        Object {
          "--height": "170px",
          "--width": "135px",
        }
      }
      width={135}
    />
  </div>
</button>
`;

exports[`renders transparent placeholder when no file name is provided 1`] = `
<button
  aria-label="Current Image"
  className="rootSelected"
  onClick={[Function]}
  type="button"
>
  <div
    className="root container"
  >
    <img
      alt="placeholder-thumbnail"
      aria-hidden="true"
      className="image placeholder"
      loading="eager"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
      style={Object {}}
    />
    <img
      alt="placeholder-thumbnail"
      className="image notLoaded"
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
      style={Object {}}
    />
  </div>
</button>
`;
